# kybernetes-imud

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  README.md
cmake/: Findasio.cmake  Findsystemd.cmake
lib/: CMakeLists.txt
lib/ArduinoCore-Minimal-Linux/: CMakeLists.txt
lib/ArduinoCore-Minimal-Linux/include/: Arduino.h  Wire.h
lib/ArduinoCore-Minimal-Linux/src/: Arduino.cpp  Common.cpp  Wire.cpp
src/: CMakeLists.txt  imu-server.cpp  imud.cpp
systemd/: imu-server.service  imu-server.socket  imud.service  imud.socket
